--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <ul class="certificate-list">
                 <li><img src="./media/cSharp.jpg" alt=""></li>
                 <li><img src="./media/htmlCss.jpg" alt=""></li>
+                <li><img src="./media/javaScript.png" alt=""></li>
                 <li><img src="./media/hymlCssSolo.png" alt=""></li>
                 <li><img src="./media/jsSolo.jpg" alt=""></li>
             </ul>
