added project section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#certificates-section">Certificates</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#projects-section">Projects</a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -77,6 +80,12 @@
                 <li><img src="./media/hymlCssSolo.png" alt=""></li>
                 <li><img src="./media/jsSolo.jpg" alt=""></li>
             </ul>
+        </section>
+
+        <section class="projects" id="projects-section">
+            <div class="brain-gain">
+                <a href="https://gymoncoaching.000webhostapp.com/" target="_blank"><img src="/media/braingain.png"></a>
+            </div>
         </section>
 
     </main>
