--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <section class="projects" id="projects-section">
             <div class="brain-gain">
-                <a href="https://gymoncoaching.000webhostapp.com/" target="_blank"><img src="/media/braingain.png"></a>
+                <a href="https://gymoncoaching.000webhostapp.com/" target="_blank"><img src="./media/braingain.png"></a>
             </div>
         </section>
 
