--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                 <h3 class="text-center my-3">Jekyll</h3>
                 <a href="https://gymoncoaching.000webhostapp.com/" target="_blank"><img class="img-fluid" src="./media/braingain.png"></a>
             </figure>
-            <figure class="col-md-4">
+<!--             <figure class="col-md-4">
                 <h3 class="text-center my-3">Sammyjs basic spa</h3>
                 <a href="https://basic-spa-cardio.000webhostapp.com/" target="_blank"><img class="img-fluid" src="./media/spa-cardio-sammyjs.png"></a>
-            </figure>
+            </figure> -->
                 
         </section>
 
